[gd_scene load_steps=4 format=3 uid="uid://bg1dnvd60wwwp"]

[ext_resource type="Script" uid="uid://bgke8uu6pgx2l" path="res://scenes/MainMenu/video_options.gd" id="1_4hap0"]
[ext_resource type="Texture2D" uid="uid://ccpgaygkjrnjt" path="res://assets/sprites/background/BG_Piramide-01.png" id="1_uqoci"]
[ext_resource type="AudioStream" uid="uid://boxomsmwdlbri" path="res://assets/audio/menu/UI_Navigation.ogg" id="2_y7sn0"]

[node name="VideoOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hap0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_uqoci")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)

[node name="Audio" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -120.0
offset_right = 350.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Fullscreen" type="Button" parent="Audio"]
layout_mode = 2
toggle_mode = true
text = "Pantalla completa"

[node name="Borderless" type="Button" parent="Audio"]
layout_mode = 2
toggle_mode = true
text = "Sin bordes"

[node name="Back" type="Button" parent="Audio"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 90
text = "Back"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_y7sn0")

[connection signal="toggled" from="Audio/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Audio/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="pressed" from="Audio/Back" to="." method="_on_back_pressed"]
